--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,15 @@
 
 <body class="page__body">
   <div class="site-container">
-    @include('partials/header.html')
-    <main class="main">
-      <div class="main__table-wrapper table-wrapper">
-        @include('partials/table.html')
-        <button class="table-wrapper-btn" type="button">New item</button>
-      </div>
-    </main>
-    <!-- @include('partials/footer.html') -->
+    <div class="container">
+      <main class="main">
+        @include('partials/header.html')
+        <div class="main__table-wrapper table-wrapper">
+          @include('partials/table.html')
+          <button class="table-wrapper-btn" type="button">New item</button>
+        </div>
+      </main>
+    </div>
   </div>
 </body>
 
