--- a/src/index.html
+++ b/src/index.html
@@ -4,16 +4,18 @@
 @include('partials/head.html')
 
 <body class="page__body">
-  @include('partials/modal.html')
   <div class="site-container">
     <div class="container">
       <main class="main">
         @include('partials/header.html')
         <div class="main__table-wrapper table-wrapper">
           @include('partials/table.html')
-          <button class="table-wrapper-btn" type="button">New item</button>
+          <button class="table-wrapper-btn" type="button" data-path="first">New item</button>
         </div>
       </main>
+      <div class="main__container">
+        @include('partials/modal.html')
+      </div>
     </div>
   </div>
 </body>
